RESOLVED FIXED167633
Performance Timeline: Prepare for Worker support
https://bugs.webkit.org/show_bug.cgi?id=167633
Summary Performance Timeline: Prepare for Worker support
Joseph Pecoraro
Reported 2017-01-31 00:04:04 PST
Summary: Performance Timeline: Prepare for Worker support Remove Document / Frame references in Performance. We will move to ScriptExecutionContext to support Document/WorkerGlobalScope. And Performance can be given a timeOrigin value instead of looking it up through the Document.
Attachments
[PATCH] Proposed Fix (22.88 KB, patch)
2017-01-31 00:08 PST, Joseph Pecoraro
no flags
[PATCH] Proposed Fix (22.89 KB, patch)
2017-01-31 00:37 PST, Joseph Pecoraro
rniwa: review+
Archive of layout-test-results from ews122 for ios-simulator-wk2 (807.77 KB, application/zip)
2017-01-31 04:05 PST, Build Bot
no flags
[PATCH] For Bots (22.96 KB, patch)
2017-02-01 13:48 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2017-01-31 00:08:45 PST
Created attachment 300193 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2017-01-31 00:11:21 PST
Attachment 300193 [details] did not pass style-queue: ERROR: Source/WebCore/page/PerformanceUserTiming.cpp:120: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 3 2017-01-31 00:37:53 PST
Created attachment 300195 [details] [PATCH] Proposed Fix I'm 0 for 2 on merge conflicts today! Lets try this one.
WebKit Commit Bot
Comment 4 2017-01-31 00:39:05 PST
Attachment 300195 [details] did not pass style-queue: ERROR: Source/WebCore/page/PerformanceUserTiming.cpp:120: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 5 2017-01-31 04:05:02 PST
Comment on attachment 300195 [details] [PATCH] Proposed Fix Attachment 300195 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/2978790 New failing tests: css3/filters/backdrop/dynamic-with-clip-path.html
Build Bot
Comment 6 2017-01-31 04:05:06 PST
Created attachment 300201 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Joseph Pecoraro
Comment 7 2017-01-31 21:08:10 PST
Comment on attachment 300201 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 > New failing tests: > css3/filters/backdrop/dynamic-with-clip-path.html This failure is unrelated.
Joseph Pecoraro
Comment 8 2017-01-31 21:08:37 PST
Ping for reviewers! This blocks the next patch which is adding Performance APIs to Workers.
Ryosuke Niwa
Comment 9 2017-01-31 21:59:10 PST
Comment on attachment 300195 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=300195&action=review > Source/WebCore/page/Performance.cpp:91 > + Please assert that we're in the main thread here.
Joseph Pecoraro
Comment 10 2017-02-01 13:48:17 PST
Created attachment 300351 [details] [PATCH] For Bots
WebKit Commit Bot
Comment 11 2017-02-01 13:50:05 PST
Attachment 300351 [details] did not pass style-queue: ERROR: Source/WebCore/page/PerformanceUserTiming.cpp:120: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 12 2017-02-01 14:14:11 PST
Note You need to log in before you can comment on or make changes to this bug.